# powhasher

./: .gitignore  Cargo.toml  README.md  config.json  example-config.json
cryptonight/: Cargo.toml  build.rs
cryptonight/src/: aesni.rs  cn_aesni.asm  cn_aesni.rs  keccak1600.rs  lib.rs  mmap.rs  state.rs
src/: hexbytes.rs  job.rs  main.rs  worker.rs  worksource.rs
src/hasher/: mod.rs
src/poolclient/: connection.rs  hexbytes.rs  messages.rs  mod.rs  stats.rs  worksource.rs
src/worker/: mod.rs
src/workgroup/: mod.rs  stats.rs  worker.rs
