[package]
name = "powhasher"
version = "0.2.0"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cn-stratum = "0.3.0"
byteorder = "1.2"
core_affinity = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
env_logger = "0.5"
log = "0.4"
clap = "2"

[dependencies.cryptonight]
path = "cryptonight"
version = "0.1.0"

[profile.release]
panic = "abort"
lto = true
