[package]
name = "powhasher"
version = "0.2.2"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "CryptoNight miner for Monero and other CryptoNote coins "
repository = "https://github.com/kazcw/powhasher"

[dependencies]
yellowsun = "0.2"
cn-stratum = "0.4.0"
byteorder = "1.2"
core_affinity = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
env_logger = "0.6"
log = "0.4"
clap = "2"

[profile.release]
panic = "abort"
lto = true
