[package]
name = "cryptonight"
version = "0.1.0"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
groestl-aesni = "0.1.3"
jh-x86_64 = "0.1.0"
libc = "0.2.33"
keccak = "0.1.0"
blake = { git = "git://github.com/kazcw/RustCrypto-hashes", branch = "master", version = "0.1.0" }
skein = { git = "git://github.com/kazcw/RustCrypto-hashes", branch = "master", version = "0.2.2" }
sha3 = { git = "git://github.com/kazcw/RustCrypto-hashes", branch = "master" }
serde = "1.0.34"
serde_derive = "1.0.34"

[dev-dependencies]
hex_literals = "0.1.6"

[profile.test]
opt-level = 2

[patch.crates-io]
threefish = { git = "git://github.com/kazcw/RustCrypto-block-ciphers", branch = "threefish" }
block-buffer = { git = "git://github.com/RustCrypto/utils", rev = "82f3e1b8", version = "0.4.0" }
